Update createSchema
