# app/src/main/java/io/apicurio/registry/cncf/schemaregistry/JaxRsApplication.java
@@ -1,0 +1,13 @@
+package io.apicurio.registry.cncf.schemaregistry;
+
+import javax.enterprise.context.ApplicationScoped;
+import javax.ws.rs.ApplicationPath;
+import javax.ws.rs.core.Application;
+
+/**
+ * The JAX-RS application.
+ */
+@ApplicationScoped
+@ApplicationPath("/")
+public class JaxRsApplication extends Application {
+}
