# app/src/main/resources/META-INF/openapi.json
@@ -171,83 +171,6 @@
                 }
             ]
         },
-        "/schemagroups/{group-id}/schemas/{schema-id}": {
-            "get": {
-                "tags": [
-                    "schemas"
-                ],
-                "responses": {
-                    "200": {
-                        "$ref": "#/components/responses/SchemaBytePayloadResponse"
-                    }
-                },
-                "operationId": "getLatestSchema",
-                "summary": "Get latest version of schema",
-                "description": "Get latest version of schema."
-            },
-            "post": {
-                "requestBody": {
-                    "description": "schema content",
-                    "content": {
-                        "application/json;format=avro": {
-                            "schema": {
-                                "$ref": "#/components/schemas/SchemaBytePayload"
-                            }
-                        }
-                    },
-                    "required": true
-                },
-                "tags": [
-                    "registration"
-                ],
-                "responses": {
-                    "200": {
-                        "$ref": "#/components/responses/SchemaIdResponse"
-                    },
-                    "400": {
-                        "description": "Invalid request"
-                    }
-                },
-                "operationId": "createSchema",
-                "summary": "Register schema",
-                "description": "Register schema. If schema of specified name does not exist in specified group, schema is created at version 1. If schema of specified name exists already in specified group, schema is created at latest version + 1. If schema with identical content already exists, existing schema's ID is returned. \n"
-            },
-            "delete": {
-                "tags": [
-                    "schemas"
-                ],
-                "responses": {
-                    "204": {
-                        "description": "OK no content"
-                    },
-                    "404": {
-                        "description": "Matching schema not found"
-                    }
-                },
-                "operationId": "deleteSchema",
-                "summary": "Delete schema"
-            },
-            "parameters": [
-                {
-                    "name": "group-id",
-                    "description": "schema group",
-                    "schema": {
-                        "type": "string"
-                    },
-                    "in": "path",
-                    "required": true
-                },
-                {
-                    "name": "schema-id",
-                    "description": "schema id",
-                    "schema": {
-                        "type": "string"
-                    },
-                    "in": "path",
-                    "required": true
-                }
-            ]
-        },
         "/schemagroups/{group-id}/schemas/{schema-id}/versions": {
             "get": {
                 "tags": [
@@ -345,6 +268,84 @@
                     "description": "version number",
                     "schema": {
                         "type": "integer"
+                    },
+                    "in": "path",
+                    "required": true
+                }
+            ]
+        },
+        "/schemagroups/{group-id}/schemas/{schema-id}": {
+            "get": {
+                "tags": [
+                    "schemas"
+                ],
+                "responses": {
+                    "200": {
+                        "$ref": "#/components/responses/SchemaBytePayloadResponse"
+                    }
+                },
+                "operationId": "getLatestSchema",
+                "summary": "Get latest version of schema",
+                "description": "Get latest version of schema."
+            },
+            "post": {
+                "requestBody": {
+                    "description": "schema content",
+                    "content": {
+                        "application/json;format=avro": {
+                            "schema": {
+                                "$ref": "#/components/schemas/SchemaBytePayload"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "tags": [
+                    "registration"
+                ],
+                "responses": {
+                    "200": {
+                        "$ref": "#/components/responses/SchemaIdResponse"
+                    },
+                    "400": {
+                        "description": "Invalid request"
+                    }
+                },
+                "operationId": "createSchema",
+                "summary": "Register schema",
+                "description": "Register schema. If schema of specified name does not exist in specified group, schema is created at version 1. If schema of specified name exists already in specified group, schema is created at latest version + 1. If schema with identical content already exists, existing schema's ID is returned. \n",
+                "x-codegen-async": true
+            },
+            "delete": {
+                "tags": [
+                    "schemas"
+                ],
+                "responses": {
+                    "204": {
+                        "description": "OK no content"
+                    },
+                    "404": {
+                        "description": "Matching schema not found"
+                    }
+                },
+                "operationId": "deleteSchema",
+                "summary": "Delete schema"
+            },
+            "parameters": [
+                {
+                    "name": "group-id",
+                    "description": "schema group",
+                    "schema": {
+                        "type": "string"
+                    },
+                    "in": "path",
+                    "required": true
+                },
+                {
+                    "name": "schema-id",
+                    "description": "schema id",
+                    "schema": {
+                        "type": "string"
                     },
                     "in": "path",
                     "required": true
